# src/Features/Access/ApiKeyClient/Infrastructure/Driver/ApiKeyClientPlugin.php
@@ -40,6 +40,8 @@ class ApiKeyClientPlugin extends MicroPlugin
     {
         $app->group('/api/api-key-clients', [$this, 'setRoutesForApiKeyClient']);
         $app->group('/api/me/acl/api-key-clients', [$this, 'setRoutesForApiKeyClientAcl']);
+        $app->group('/api/access/api-key-clients', [$this, 'setRoutesForApiKeyClient']);
+        $app->group('/api/me/acl/access/api-key-clients', [$this, 'setRoutesForApiKeyClientAcl']);
     }
     #[Override]
     public function registerEvents(EventListenersRegistrarInterface $bus)
